# multiagent_planning

./: .gitignore  CheckCollDMPC.m  CollConstr.m  CollConstrDMPC.m  EqConstr.m  IneqConstr.m  README.md  Test.m  Test_cases.txt  comp.mat  comp_all_5.mat  comp_bound_11(spd1).mat  comp_deciSCP_vs_DMPC4.mat  comp_heuristics_1_2.mat  comp_q2.mat  comp_test_ellipconstr.m  comp_tol.mat  comp_tol2.mat  decSCP.m  dec_vs_dmpc_10-12.mat  dec_vs_dmpc_k-1_2.mat  dec_vs_dmpc_k.mat  dmpc.m  drawing_dsl.m  initSolution.m  penalty_test.m  plot_dec_vs_dmpc.m  propState.m  propStatedmpc.m  singleSCP.m  singleiSCP.m  solveDMPC.m  success_test.m  success_test_dmpc.m  success_test_oneshotSoft.m  tolerance_test.m
DMPC/: CheckCollEllipDMPC.m  CollConstrEllipDMPC.m  ReachedGoal.m  comp_epsilon.m  comp_heuristics.m  dmpc.m  dmpc_ellipsoid.m  dmpc_firstpicture.m  dmpc_paper.m  initDMPC.m  propStatedmpc.m  randomExchange.m  solveDMPC.m  solveEllipDMPC.m  solveSoftDMPC.m  success_test_softdmpc.m
DMPC/CPP_results/: cluster_test.m  cluster_test.txt  read_result.m  trajectories.txt
DMPC/Matlab/: CheckCollEllipDMPC.m  CheckCollSoftDMPC.m  CollConstrEllipDMPC.m  CollConstrSoftDMPC.m  CollConstrSoftDMPC2.m  ReachedGoal.m  dmpc_ellipsoid.m  dmpc_ellipsoid_repair.m  dmpc_soft.m  dmpc_soft_bound.m  dmpc_soft_bound2.m  is_inbounds.m  maxDeviation.m  randomExchange.m  randomTest.m  solveDMPC.m  solveEllipDMPC.m  solveSoftDMPC.m  solveSoftDMPC_c.m  solveSoftDMPCall.m  solveSoftDMPCbound.m  solveSoftDMPCbound2.m  solveSoftDMPCrepair.m
DMPC/dmpc_cpp/: CMakeLists.txt  FindGUROBI.cmake  cluster_test.cpp  dmpc.cpp  dmpc.h  example1.cpp  main.cpp  spline.h
DMPC/dmpc_cpp/cmake/: FindGUROBI.cmake
DMPC/dmpc_cpp/cmake-modules/: Findqpoases.cmake
Data/: 26_comp.mat  Fai3_0.mat  Fail_impossibru.mat  comp2.mat  comp_bound_8.mat  comp_deciSCP_vs_DMPC.mat  comp_deciSCP_vs_DMPC2.mat  comp_deciSCP_vs_DMPC3.mat  comp_dmpc_cupSCP3.mat  comp_dmpc_cupSCP4.mat  comp_dmpc_cupscp.mat  comp_dmpc_cupscp2.mat  comp_heuristic.mat  comp_q.mat  comp_tol3.mat  comparing_all_heuristics.mat  dec_vs_dmpc_k-1.mat  dec_vs_dmpc_k-1_3.mat  heuristic_addingcheck.mat  heuristic_addingcheck2.mat  heuristic_addingcheck3.mat  heuristic_addingcheck4.mat  heuristic_dmpc.mat  inter.mat  prueba_cup.mat  too_long.mat
Figures/: NewQ_prob.eps  NewQ_time.eps  PrevQ_prob.eps  PrevQ_time.eps  compQs.eps  dec_vs_dmpc_dist.eps  dec_vs_dmpc_prob.eps  dec_vs_dmpc_time.eps
Latex/: optidef.sty  reference.bib  root.aux  root.bbl  root.blg  root.tex
Latex/figures/: 30_rand.eps  comp_time.eps  rail_a.eps  rail_b.eps  rail_c.eps  rail_d.eps  rail_e.eps  rail_final.eps  test.tex
Latex/optidef/: README.md  optidef.tex
Latex/sections/: 0_outline.tex  1_introduction.tex  (+4 more)
Tests/: Test_cases.txt  comp_3approaches.m  comp_3approaches_fixedT.m  comp_bound.m  comp_confidence.m  comp_dmpc_cupSCP.m  comp_dmpc_deciSCP.m  comp_kctr.m  comp_repair.m  failure_rate.m  plot_3approaches.m  tolerance_test.m  transition_paper_plot.m  video_transition_2agents.m  video_transition_8agents.m
cup-SCP/: AddCollConstr.m  cupSCP.m  getStates.m  initAllSolutions.m  solveCupSCP.m
dec-iSCP/: AllCollConstr.m  CheckforAllColl.m  CheckforColl.m  CollConstr.m  EqConstr.m  decSCP.m  getPosMat.m  getPosVelMat.m  initSolution.m  propState.m  singleSCP.m  singleiSCP.m
plot/: drawing_dsl.m  plot_3approaches.m  plot_dec_vs_dmpc.m  plot_failure_rate.m  plot_hard_vs_soft.m  test_draw_plane.m  transition_paper_plot.m  video_transition_2agents.m  video_transition_4agents.m
test/: comp_3approaches.m  comp_3approaches_fixedT.m  comp_confidence.m  comp_dmpc_cupSCP.m  comp_dmpc_deciSCP.m  comp_hardsoft.m  comp_hardsoft2.m  comp_hardsoft3.m  comp_heuristics.m  comp_kctr.m  comp_repair.m  comp_test_ellipconstr.m  failure_rate.m  success_test_dmpc.m  success_test_oneshotSoft.m
(+58 files in other folders)
